--- a/views/templates/admin/configuration.html.twig
+++ b/views/templates/admin/configuration.html.twig
@@ -82,6 +82,7 @@
   <script>
   $(() => {
     window.prestashop.component.initComponents([
+      'MultistoreConfigField',
       'TranslatableField',
       'TinyMCEEditor',
       'TranslatableInput',
